# AsyncRaTT

./: .gitignore  LICENSE  Notes.md  build.sh  program_env_string.sh  test.ml  trans_comp.sh
arc/: arc.opam  dune  dune-project
arc/example/: dune  simulator.ml
arc/lib/: absyn.ml  clocks.ml  defaults.ml  dune  errors.ml  exceptions.ml  flags.ml  free_bindings.ml  inference.ml  interpreter.ml  io.ml  lexer.mll  main.ml  make_trans_template.sh  monad.ml  optimize.ml  parser.mly  program_env.ml  rename.ml  runtime_value.ml  transpile_template.ml  transpiler.ml  type_env.ml  type_env_m.ml  type_env_m.mli  util.ml
arc/src/: arc.ml  dune  program_env_string.ml
arc/test/: arc_test.ml  dune  file_tests.ml  inference_tests.ml  random_tests.ml
extensions/asyncratt-highlighting/: README.md  package.json
test_files/fails/: c_add_two_delayed_integers.ar  c_advance_on_different_clocks.ar  c_advance_on_different_clocks_in_match.ar  c_dual_adv.ar  c_no_clock_delay.ar  c_two_invalid_clocks_from_pattern_match.ar  o_arb_delay.ar  o_no_output_channel_bindings.ar  s_free_function_in_inner_recursive.ar  s_function_reference_in_delay.ar  s_nonstable_function_in_delay.ar  s_nonstable_in_box.ar  s_nonstable_value_in_boxed_closure.ar  s_nonstable_value_in_boxed_closure1.ar  s_unify_nonstable_and_stable_in_application.ar  t_adv_lamda_delay.ar  t_adv_not_later.ar  t_adv_outside_delay.ar  t_circular_type_in_scan.ar  t_eval_rec1.ar  t_no_delay_in_delay.ar  t_non-productive.ar  t_rec_internal_wrong_usage.ar  t_select_outside_delay.ar
test_files/works/: clock_from_pattern_match.ar  count.ar  (+39 more)
(+1 files in other folders)
